--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -79,7 +80,7 @@ code {
   max-width: 12rem;
   min-width: 12rem;
   height: 100%;
-  object-fit:cover;
+  object-fit:contain;
   padding: 20px;
   align-self: center;
 }
